api: add support for `defaults`
The defaults are stored as a uci-script and run on first boot. Since
they are embedded in the firmware, a reset will not delete them.

These can be used to setup the WiFi or whatever else fits in a shell
script.
